--- a/style.css
+++ b/style.css
@@ -1,17 +1,64 @@
+body {
+    background-color: olive;
+}
+
+header {
+    position: relative;
+    display: flex;
+    align-content: center;
+    align-self: start;
+    width: 100%;
+    height: 4rem;
+    margin: 0 0 0 0;
+}
+.playwrite-au-qld {
+  font-family: "Playwrite AU QLD", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 nav {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    width: 100%;
 }
 nav > div > a {
-    color: black;
+    color: wheat;
+    font-family: "Roboto";
+    font-weight: normal;
     text-decoration: none;
 }
 nav > div > a:hover {
     text-decoration: underline;
 }
-
+main {
+    background-color: wheat;
+    display: grid;
+    font-family: Georgia, 'Times New Roman', Times, serif
+}
+h1 {
+    width: 100%;
+    margin: 2rem 0 2rem 0;
+    margin: 2rem 0 1rem 0;
+    padding: 2rem 0 2rem 0;
+    font-family: "Playwrite FR Moderne", serif;
+    font-optical-sizing: auto;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 3.5rem;
+    text-align: center;
+}
+p {
+    margin: 0 0 2rem 0;
+    text-align: justify;
+    padding: 0 1rem 0 1rem;
+}
 footer {
-    font-size: x-small;
+    color: wheat;
+    font-family: "Roboto";
+    font-weight: normal;
+    text-decoration: none;
 }
