--- a/style.css
+++ b/style.css
@@ -30,20 +30,31 @@ nav > div > a:hover {
 main {
     background-color: wheat;
     display: grid;
-    font-family: Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 10px;
+}
+@font-face {
+    font-family: "Quick Draw";
+    src: url("TAYQuickDraw.woff") format("woff");
 }
 h1 {
     width: 100%;
-    margin: 2rem 0 2rem 0;
-    margin: 2rem 0 1rem 0;
-    padding: 2rem 0 2rem 0;
-    font-family: "Playwrite FR Moderne", serif;
+    margin: 2rem 0 0rem 0;
+    padding: 2rem 0 0rem 0;
+    font-family: "Quick Draw", serif;
     font-optical-sizing: auto;
     font-size: 3rem;
     font-style: normal;
     font-weight: normal;
     line-height: 3.5rem;
     text-align: center;
+}
+.location-text {
+    font-size: medium;
+    margin: 0;
+    padding: 0;
 }
 p {
     margin: 0 0 2rem 0;
@@ -54,5 +65,6 @@ footer {
     color: wheat;
     font-family: "Roboto";
     font-weight: normal;
-    text-decoration: none;
+    margin: 1rem;
+    padding: 1rem;
 }
