--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+:root {
+    --main-paper-color: wheat;
+    --main-accent-color: #D64933;
+}
+
 body {
-    background-color: #D64933;
+    background-color: var(--main-accent-color);
 }
 
 header {
@@ -19,7 +24,7 @@ nav {
     width: 100%;
 }
 nav > div > a {
-    color: wheat;
+    color: var(--main-paper-color);
     font-family: "Roboto";
     font-weight: normal;
     text-decoration: none;
@@ -28,7 +33,7 @@ nav > div > a:hover {
     text-decoration: underline;
 }
 main {
-    background-color: wheat;
+    background-color: var(--main-paper-color);
     display: grid;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
@@ -40,12 +45,14 @@ main {
     src: url("fonts/TAYQuickDraw.woff") format("woff");
 }
 .profile-picture {
+    
+    border: solid var(--main-accent-color);
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
     max-width: 150px;
     text-align: center;
 }
 h1 {
-    color: #D64933;
+    color: var(--main-accent-color);
     width: 100%;
     margin: 1rem 0 1rem 0;
     padding: 1rem 0 1rem 0;
@@ -68,14 +75,14 @@ p {
     padding: 0 1rem 0 1rem;
 }
 a {
-    color: #D64933; 
+    color: var(--main-accent-color); 
     text-decoration: none;   
 }
 a:hover {
     text-decoration: underline;
 }
 footer {
-    color: wheat;
+    color: var(--main-paper-color);
     font-family: "Roboto";
     font-weight: normal;
     margin: 1rem;
