getting started with grid

--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ p {
     text-align: justify;
     padding: 0 1rem 0 1rem;
 }
+.index-container {
+    display: grid;
+}
 a {
     color: var(--main-accent-color); 
     text-decoration: none;   
