--- a/style.css
+++ b/style.css
@@ -34,11 +34,13 @@ nav > div > a:hover {
 }
 main {
     background-color: var(--main-paper-color);
-    display: grid;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 1rem;
     border-radius: 10px;
+}
+.main-container {
+    padding: 0 3rem 0 3rem;
 }
 @font-face {
     font-family: "Quick Draw";
@@ -74,8 +76,31 @@ p {
     text-align: justify;
     padding: 0 1rem 0 1rem;
 }
-.index-container {
+.directory-container {
     display: grid;
+    grid-template-columns: 2 1fr;
+    grid-template-rows: 4, 1fr; 
+}
+#basics {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    /*  grid-area: <row-start> / <column-start> / <row-end> / <column-end>;*/
+}
+#code {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+}
+#music {
+    grid-area: 2 / 1 / 3 / 2;
+}
+#art {
+    grid-area: 3 / 1 / 4 / 2;
+}
+#blog {
+    grid-area: 3 / 2 / 4 / 3;
+}
+#short-stories {
+    grid-area: 4 / 1 / 5 / 2;
 }
 a {
     color: var(--main-accent-color); 
