--- a/style.css
+++ b/style.css
@@ -81,26 +81,38 @@ p {
     grid-template-columns: 2 1fr;
     grid-template-rows: 4, 1fr; 
 }
+@media (max-width: 768px) {
+    .directory-container {
+        display: block;
+    }
+}
 #basics {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     /*  grid-area: <row-start> / <column-start> / <row-end> / <column-end>;*/
 }
 #code {
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     grid-column: 2 / 3;
 }
 #music {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
 }
 #art {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-row: 4 / 5;
+    grid-column: 1 / 2;
 }
 #blog {
-    grid-area: 3 / 2 / 4 / 3;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
 }
 #short-stories {
-    grid-area: 4 / 1 / 5 / 2;
+    grid-row: 4 / 5;
+    grid-column: 2 / 3;
+}
+li {
+    margin: 10px 0;
 }
 a {
     color: var(--main-accent-color); 
