--- a/style.css
+++ b/style.css
@@ -54,10 +54,22 @@ main {
 .profile-picture {
     
     border: solid var(--main-accent-color);
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
     max-width: 150px;
     text-align: center;
+    border-radius: 250px 750px 250px 750px / 
+                   750px 250px 750px 250px;
+    animation: morph 11s ease-in-out alternate infinite;
 }
+@keyframes morph {
+    50% {
+      border-radius: 750px 550px 350px 750px /
+                     350px 750px 550px 450px;
+    }
+    100% {
+      border-radius: 750px 250px 750px 250px /
+                     250px 750px 250px 750px;
+    }
+  }
 h1 {
     color: var(--main-accent-color);
     width: 100%;
